tests/trybuild/schedule/comma_alone.stderr
error: no rules expected the token `,`
 --> tests/trybuild/schedule/comma_alone.rs:4:30
  |
4 |     let schedule = schedule!(,);
  |                              ^ no rules expected this token in macro call
  |
note: while trying to match meta-variable `$task:expr`
 --> src/system/schedule/mod.rs
  |
  |         ($task:expr $(,$tasks:expr)* $(,)?) => (
  |          ^^^^^^^^^^
