tests/trybuild/schedule/comma_alone.rs
use brood::system::schedule;

fn main() {
    let schedule = schedule!(,);
}
